--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<debug>false</debug>
 						</exclude>
 					</excludes>
 				</configuration>
